Trying to resolve font icon issues and pdf issues

--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -68,7 +68,8 @@
                   'fa-repeat' : widget.WidgetName == 'HomeLoanInstalment' || widget.WidgetName == 'WealthHomeLoanInstalment',
                   'fa-bar-chart' : widget.WidgetName == 'MCAVATAnalysis' || widget.WidgetName == 'WealthMCAVATAnalysis'
               }">
-          </span><span class="nav-title text-truncate"> {{widget.DisplayName}} </span>
+          </span>
+          <span class="nav-title text-truncate"> {{widget.DisplayName}} </span>
         </a>
       </li>
     </ul>
