--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -1,3 +1,4 @@
+<!--<p>testing PP</p>-->
 <div class='top-bar fixed'>
   <button class="fa float-left hamburger-dashboard"
           [ngClass]="isWidgetSidebar? 'fa-arrow-left' : 'fa-bars'"
