--- a/API/Resources/css/ltr.css
+++ b/API/Resources/css/ltr.css
@@ -290,7 +290,7 @@
     overflow-x: hidden;
 }
 
-.CustomerDetails {
+/*.CustomerDetails {
     font-size: 8pt;
     text-align: left;
     font-family: 'Mark Pro Medium';
@@ -299,9 +299,9 @@
 
     .CustomerDetails p {
         margin-bottom: 0.25rem !important;
-    }
+    }*/
 
-.ClientDetails {
+/*.ClientDetails {
     font-size: 8pt;
     text-align: left;
     font-family: 'Mark Pro Medium';
@@ -309,7 +309,7 @@
 
     .ClientDetails p {
         margin-bottom: 0.25rem !important;
-    }
+    }*/
 
 .BranchDetails {
     font-size: 8pt;
@@ -374,15 +374,15 @@
     font-family: 'Mark Pro Bold';
 }
 
-.LoanTransactionTable th {
+/*.LoanTransactionTable th {
     background-color: #006341 !important;
     color: #fff;
     font-size: 8pt;
     font-family: 'Mark Pro Regular';
     font-weight: normal !important;
-}
+}*/
 
-.LoanTransactionTable-W th {
+/*.LoanTransactionTable-W th {
     background-color: black !important;
     color: #fff;
     font-size: 8pt;
@@ -407,13 +407,13 @@
 .LoanTransactionTable1 tbody {
     font-size: 8pt;
     font-family: 'Arial';
-}
+}*/
 
 .custom-bold-font {
     font-family: 'Mark Pro Bold' !important;
 }
 
-.InvestmentBreakdown thead {
+/*.InvestmentBreakdown thead {
     background-color: #1c6a41 !important;
     color: #fff;
     font-family: 'Mark Pro Regular';
@@ -425,12 +425,12 @@
 
     .InvestmentBreakdown tbody tr:nth-of-type(odd) {
         background-color: #F2F2F2 !important;
-    }
+    }*/
 
-.InvestmentDetail td span {
+/*.InvestmentDetail td span {
     color: #005b00 !important;
     font-family: 'Mark Pro Regular';
-}
+}*/
 
 .card-body-header {
     font-size: 14pt;
@@ -504,7 +504,7 @@
     align-items: center;
 }
 
-.InvestmentClosingBalanceDiv {
+/*.InvestmentClosingBalanceDiv {
     margin-top: 0.5rem !important;
     padding-left: 25px;
     margin-bottom: .25rem !important;
@@ -516,16 +516,16 @@
     padding-left: 25px;
     margin-bottom: .25rem !important;
     font-family: 'Mark Pro Regular';
-}
+}*/
 
-.Investment-nav-tabs {
+/*.Investment-nav-tabs {
     font-family: 'Mark Pro Regular';
 }
 
     .Investment-nav-tabs a {
         font-family: 'Mark Pro Regular';
         font-size: 8pt;
-    }
+    }*/
 
 .w-7 {
     width: 7%;
@@ -798,12 +798,12 @@
     font-size: 12pt;
 }
 
-#HomeLoanDetailTable tr:first-child td {
+/*#HomeLoanDetailTable tr:first-child td {
     font-family: 'Mark Pro Bold';
     color: #005b00 !important;
     padding-bottom: .5rem !important;
     font-size: 12pt;
-}
+}*/
 
 #PersonalLoanDetailTable tr:first-child td {
     font-family: 'Mark Pro Bold';
@@ -825,15 +825,15 @@
     font-family: 'Mark Pro Regular';
 }
 
-.NedbankPersonalLoanTxt {
+/*.NedbankPersonalLoanTxt {
     color: #005b00 !important;
     font-family: 'Mark Pro Bold' !important;
     font-size: 12pt !important;
-}
+}*/
 
-.LoanTransactionTable tbody tr:nth-of-type(odd), .LoanTransactionTable-W tbody tr:nth-of-type(odd) {
+/*.LoanTransactionTable tbody tr:nth-of-type(odd), .LoanTransactionTable-W tbody tr:nth-of-type(odd) {
     background-color: #F2F2F2 !important;
-}
+}*/
 
 .SpecialMessageDiv {
     font-family: 'Mark Pro Regular';
@@ -865,26 +865,26 @@
     padding-left: 1.25rem;
 }
 
-.Personalloan-nav-tabs {
+/*.Personalloan-nav-tabs {
     font-family: 'Mark Pro Regular';
 }
 
     .Personalloan-nav-tabs a {
         font-family: 'Mark Pro Regular';
         font-size: 8pt;
-    }
+    }*/
 
-.PersonalLoanDetailDiv {
+/*.PersonalLoanDetailDiv {
     background-color: #F2F2F2;
     padding: 20px 0px;
-}
+}*/
 
-.HomeLoanDetailDiv {
+/*.HomeLoanDetailDiv {
     background-color: #F2F2F2;
     padding: 10px 0px;
-}
+}*/
 
-.NedbankHomeLoanTxt {
+/*.NedbankHomeLoanTxt {
     color: #005b00 !important;
     font-family: 'Mark Pro Bold' !important;
     font-size: 12pt !important;
@@ -894,7 +894,7 @@
     font-family: Arial !important;
     font-size: 12pt !important;
     font-weight: 700;
-}
+}*/
 .CS-header {
     font-size: 14pt;
     font-family: 'arial';
@@ -902,11 +902,11 @@
     font-weight: 700;
 }
 
-.NedbankHomeLoanTxt-W {
+/*.NedbankHomeLoanTxt-W {
     color: rgb(126, 84, 117) !important;
     font-family: 'Mark Pro Bold' !important;
     font-size: 12pt !important;
-}
+}*/
 
 .PaymentDueSpecialMessageDiv {
     font-family: 'Mark Pro Regular';
@@ -921,14 +921,14 @@
     }
 
 
-.Homeloan-nav-tabs {
+/*.Homeloan-nav-tabs {
     font-family: 'Mark Pro Regular';
 }
 
     .Homeloan-nav-tabs a {
         font-family: 'Mark Pro Regular';
         font-size: 8pt;
-    }
+    }*/
 
 .height110px {
     height: 110px;
@@ -1024,10 +1024,10 @@ hr {
     font-family: 'Mark Pro Medium';
 }
 
-.GreenbacksContactUsDiv {
+/*.GreenbacksContactUsDiv {
     font-family: 'Mark Pro Regular';
     font-size: 9pt;
-}
+}*/
 
 @media only screen and (max-width:1024px) {
     .ip-w-5 {
@@ -1140,7 +1140,7 @@ hr {
     color: rgb(126, 84, 117) !important;
 }
 
-.InvestmentDetailW td span {
+/*.InvestmentDetailW td span {
     color: rgb(126, 84, 117) !important;
     font-family: 'Mark Pro Regular';
 }
@@ -1149,14 +1149,14 @@ hr {
     color: rgb(126, 84, 117) !important;
     font-family: 'Mark Pro Bold';
     font-size: 12pt;
-}
-
+}*/
+/*
 .InvestmentBreakdownW thead {
     background-color: black !important;
     color: #fff;
     font-family: 'Mark Pro Regular';
     font-family: 'Mark Pro Regular';
-}
+}*/
 
 .card-body-header-w {
     font-size: 11pt;
@@ -1173,10 +1173,10 @@ hr {
     padding-left: 0px !important;
 }
 
-.InvestmentBreakdownW tbody tr:nth-of-type(even) {
+/*.InvestmentBreakdownW tbody tr:nth-of-type(even) {
     background-color: #F2F2F2 !important;
 }
-
+*/
 .SummaryTable td {
     padding: 0px 25px;
     font-family: 'Mark Pro Regular';
@@ -1195,7 +1195,7 @@ hr {
     margin-right: 15px !important;
 }
 
-.mca_header_label {
+/*.mca_header_label {
     font-size: 14pt;
     font-family: 'Mark Pro Bold';
     color: rgb(0, 91, 0) !important;
@@ -1322,21 +1322,21 @@ hr {
     font-size: 8pt;
     font-family: 'Mark Pro Regular';
     font-weight: normal !important;
-}
+}*/
 
-.CorporateSaverTable {
+/*.CorporateSaverTable {
     height: 23px !important;
     font-size: 9p !important;
 }
-
-.LoanTransactionTable1 tbody tr:nth-of-type(odd), .LoanTransactionTable1-W tbody tr:nth-of-type(odd) {
+*/
+/*.LoanTransactionTable1 tbody tr:nth-of-type(odd), .LoanTransactionTable1-W tbody tr:nth-of-type(odd) {
     background-color: #F2F2F2 !important;
 }
-
+*/
 .custom-paragraph {
     line-height: 28px !important;
 }
-
+/*
 .LoanTransactionTable1 tbody tr:nth-of-type(odd), .LoanTransactionTable1-W tbody tr:nth-of-type(odd) {
     background-color: #F2F2F2 !important;
-}
+}*/
